# django-recipe-app-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: checks.yml
app/app/: calc.py  settings.py  urls.py
app/core/: admin.py  models.py  views.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_auto_20231222_1105.py  0004_auto_20231223_1606.py  0005_recipe_image.py
app/core/tests/: test_admin.py  test_commands.py  test_models.py  test_user_api.py
app/recipe/: serializers.py  urls.py  views.py
app/recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
app/user/: serializers.py  urls.py
src/app/: settings.py  urls.py
src/core/: admin.py  models.py
src/core/tests/: test_commands.py  test_models.py  test_user_api.py
src/user/: serializers.py
