[tool.poetry]
name = "django-recipe-app-api"
version = "0.1.0"
description = ""
authors = ["thinhvqnguyen <thinh.nvq.js220597@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = ">=3.2.4,<3.3"
djangorestframework = ">=3.12.4,<3.13"
psycopg2 = ">=2.8.6,<2.9"
drf-spectacular = ">=0.15.1,<0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
